# cheetah-signaling

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  PR_BODY_449.md  README.md  SystemArchitecture.md  buf.yaml  config.example.toml  deny.toml  rust-toolchain.toml
apps/cheetah-ctl/: Cargo.toml  README.md
apps/cheetah-ctl/src/: main.rs
apps/cheetah-migration-tool/: Cargo.toml  README.md
apps/cheetah-migration-tool/src/: clock.rs  error.rs  importer.rs  lib.rs  main.rs  mappers.rs  model.rs  source.rs
apps/cheetah-migration-tool/src/importer/: parents.rs  tests.rs
apps/cheetah-signaling/: Cargo.toml  README.md
apps/cheetah-signaling/src/: assembly.rs  gb_catalog_buffer.rs  gb_event_admission.rs  gb_event_context.rs  gb_event_processing.rs  gb_event_sink.rs  main.rs  onvif_discovery.rs  operation_dispatch_worker.rs  periodic_reconcile_worker.rs  workers.rs
apps/cheetah-signaling/src/gb_event_sink/: catalog.rs  device.rs  dispatch.rs  media_session.rs  mod.rs  outbox.rs
crates/api/cheetah-api-http/: Cargo.toml  README.md
crates/api/cheetah-http-api/: Cargo.toml  README.md
crates/api/cheetah-http-api/openapi/: signaling-v1.yaml
crates/api/cheetah-http-api/src/: audit.rs  auth.rs  error.rs  event_cache.rs  extract.rs  json_body.rs  lib.rs  logging.rs  metrics.rs  openapi.rs  rate_limit.rs  request_limits.rs  router.rs  state.rs  webhook.rs
crates/api/cheetah-http-api/tests/: auth_test.rs  device_test.rs  error_matrix_test.rs  health_test.rs  list_test.rs  media_test.rs  ops_test.rs  prod_api_test.rs  tls_test.rs  trace_test.rs  webhook_test.rs
crates/application/cheetah-signal-application/: Cargo.toml  README.md
crates/application/cheetah-signal-application/src/: admission_control.rs  command_dispatcher.rs  device_service.rs  dto.rs  event_service.rs  inbox.rs  lib.rs  media_binding_reconciler.rs  media_reconciliation.rs  media_service.rs  media_service_callback.rs  media_service_command.rs  media_service_command_start.rs  media_service_helpers.rs  media_service_reconciliation.rs  media_service_reconciliation_support.rs  media_service_reconnect.rs  media_service_start.rs  media_session_reconciler.rs  operation_reconciler.rs  operation_service.rs  outbox_reconciler.rs  outbox_relay.rs  owner_reconciler.rs  takeover_service.rs  webhook_service.rs
crates/application/cheetah-signal-application/tests/: cluster_system.rs  command_dispatcher_test.rs  device_service_test.rs  event_service_test.rs  inbox_service_test.rs  interruption_recovery_system.rs  lifecycle_recovery_system.rs  media_med_005_008_test.rs  media_reconciliation_system.rs  media_service_test.rs  media_session_reconciler_test.rs  multi_tenant_system.rs  operation_reconciler_test.rs  operation_service_test.rs  outbox_reconciler_test.rs  outbox_relay_test.rs  owner_reconciler_test.rs  sqlite_system.rs  state_independence_system.rs  takeover_service_test.rs  webhook_service_test.rs
crates/cluster/cheetah-cluster-ownership/: Cargo.toml  README.md
crates/cluster/cheetah-cluster-ownership/src/: assignment.rs  error.rs  lease.rs  lib.rs  rolling_upgrade.rs
crates/cluster/cheetah-cluster-registry/: Cargo.toml  README.md
crates/cluster/cheetah-cluster-registry/src/: compatibility.rs  error.rs  lease.rs  lib.rs
crates/cluster/cheetah-ownership/: Cargo.toml  README.md
crates/domain/cheetah-device-domain/: Cargo.toml  README.md
crates/domain/cheetah-domain/: Cargo.toml  README.md
crates/domain/cheetah-domain/src/: channel.rs  command.rs  compatibility.rs  device.rs  error.rs  event.rs  from_str_helpers.rs  in_memory.rs  lib.rs  media_binding.rs  media_callback.rs  media_client.rs  media_contract.rs  media_event_handler.rs  media_key.rs  media_node.rs  media_session.rs  node.rs  operation.rs  platform_link.rs  ports.rs  protocol_session.rs  tenant.rs  webhook.rs
crates/domain/cheetah-domain/tests/: command_test.rs  device_and_channel_test.rs  enum_from_str_test.rs  media_session_state_machine_test.rs  operation_state_machine_test.rs  protocol_session_test.rs  remaining_from_str_test.rs
crates/foundation/cheetah-config/: Cargo.toml  README.md
crates/foundation/cheetah-config/src/: lib.rs
crates/foundation/cheetah-config/tests/: config.rs
crates/foundation/cheetah-runtime-api/: Cargo.toml  README.md
crates/foundation/cheetah-secret/: Cargo.toml  README.md
crates/foundation/cheetah-secret/src/: lib.rs
crates/foundation/cheetah-signal-contracts/: Cargo.toml  README.md  build.rs
crates/foundation/cheetah-signal-contracts/src/: lib.rs  version.rs
crates/foundation/cheetah-signal-contracts/tests/: contract_compat.rs  contracts.rs  prop.rs
crates/foundation/cheetah-signal-types/: Cargo.toml  README.md
crates/foundation/cheetah-signal-types/src/: audit.rs  config.rs  config_validate.rs  context.rs  error.rs  event.rs  hash.rs  (+11 more)
crates/media/cheetah-media-client/: Cargo.toml  README.md
crates/media/cheetah-media-scheduler/: Cargo.toml  README.md
crates/messaging/cheetah-message-api/: Cargo.toml  README.md
crates/messaging/cheetah-message-local/: Cargo.toml  README.md
crates/messaging/cheetah-message-nats/: Cargo.toml  README.md
crates/messaging/cheetah-messaging-api/: Cargo.toml  README.md
crates/perf/cheetah-perf/: Cargo.toml  README.md
crates/plugin/cheetah-plugin-host/: Cargo.toml  README.md
examples/protocol-plugin/: Cargo.toml  README.md
examples/protocol-plugin/src/: main.rs
tests/common/: Cargo.toml  README.md
tests/common/src/: lib.rs
tools/gb28181-simulator/: Cargo.toml  README.md
tools/gb28181-simulator/scenarios/: baseline.toml  capacity-dev.toml  chaos-cluster.toml  faults-tcp.toml  soak-dev.toml
tools/gb28181-simulator/src/: clock.rs  device.rs  fault.rs  harness.rs  lib.rs  main.rs  platform.rs  profile.rs  report.rs  rng.rs  scenario.rs  transport.rs  wire.rs
tools/gb28181-simulator/tests/: capacity.rs  chaos.rs  soak.rs
tools/media-control-simulator/: Cargo.toml  README.md
tools/media-control-simulator/src/: main.rs
tools/onvif-simulator/: Cargo.toml  README.md
tools/onvif-simulator/src/: golden_tests.rs  main.rs  prop_tests.rs
(+791 files in other folders)
