[workspace]
members = [
    "apps/cheetah-signaling",
    "crates/foundation/*",
    "crates/runtime/*",
    "crates/domain/*",
    "crates/application/*",
    "crates/storage/*",
    "crates/messaging/*",
    "crates/cluster/*",
    "crates/media/*",
    "crates/api/*",
    "crates/plugin/*",
    "crates/protocols/*",
    "crates/testing/*",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Cheetah Signaling Contributors"]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dodojohn83/cheetah-signaling"

[workspace.dependencies]
# 初始 Phase 0 依赖基线；后续阶段按 002 计划逐项引入并锁定版本。
async-trait = "0.1.86"
tokio = { version = "1.52.3", default-features = false }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
time = { version = "0.3.41", features = ["serde", "formatting", "parsing", "macros"] }
secrecy = { version = "0.10.3", features = ["serde"] }
config = { version = "0.15.11", default-features = false, features = ["toml", "json"] }
toml = "0.8.19"
tracing = "0.1.44"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
async-nats = "0.42.0"
bytes = "1"
futures = "0.3.28"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-native-roots", "sqlite", "postgres", "migrate", "macros", "time", "uuid", "json"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unexpected_cfgs = "warn"
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "deny"
large_futures = "deny"
unnecessary_wraps = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "warn"
print_stderr = "warn"
