[workspace]
members = [
  "apps/cheetah-signaling",
  "crates/foundation/cheetah-signal-types",
  "crates/foundation/cheetah-signal-contracts",
  "crates/foundation/cheetah-runtime-api",
  "crates/domain/cheetah-device-domain",
  "crates/application/cheetah-signal-application",
  "crates/runtime/cheetah-signal-runtime",
  "crates/storage/cheetah-storage-api",
  "crates/messaging/cheetah-messaging-api",
  "crates/cluster/cheetah-ownership",
  "crates/media/cheetah-media-client",
  "crates/api/cheetah-api-http",
  "crates/protocols/cheetah-gb28181-core",
  "crates/protocols/cheetah-onvif-core",
  "tests/common",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dodojohn83/cheetah-signaling"
homepage = "https://github.com/dodojohn83/cheetah-signaling"

[workspace.dependencies]
cheetah-signal-types = { path = "crates/foundation/cheetah-signal-types", version = "0.1.0" }

tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.18.1", features = ["v7"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
config = "0.15.25"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "json"] }
tonic = "0.14.6"
prost = "0.14.4"
sqlx = { version = "0.9.0", default-features = false }
async-nats = "0.49.1"
quick-xml = "0.41.0"
rustls = "0.23.41"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
await_holding_lock = "warn"
