[workspace]
members = [
    "apps/cheetah-signaling",
    "crates/foundation/*",
    "crates/runtime/*",
    "crates/domain/*",
    "crates/application/*",
    "crates/storage/*",
    "crates/messaging/*",
    "crates/cluster/*",
    "crates/media/*",
    "crates/api/*",
    "crates/plugin/*",
    "crates/protocols/*",
    "crates/testing/*",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Cheetah Signaling Contributors"]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dodojohn83/cheetah-signaling"

[workspace.dependencies]
# 初始 Phase 0 依赖基线；后续阶段按 002 计划逐项引入并锁定版本。
async-trait = "0.1.86"
tokio = { version = "1.52.3", default-features = false }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
semver = "1.0.28"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
time = { version = "0.3.41", features = ["serde", "formatting", "parsing", "macros"] }
secrecy = { version = "0.10.3", features = ["serde"] }
config = { version = "0.15.11", default-features = false, features = ["toml", "json"] }
toml = "0.8.19"
tracing = "0.1.44"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
async-nats = { version = "0.49.1", default-features = false, features = ["jetstream", "ring"] }
axum = { version = "0.8.9", default-features = false, features = ["json", "query", "form", "tokio", "http1", "matched-path", "original-uri"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", default-features = false, features = ["cors", "compression-gzip", "timeout", "trace", "limit"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7", default-features = false }
jsonwebtoken = { version = "9.3.1", default-features = false, features = ["use_pem"] }
subtle = "2.6.1"
hmac = "0.12.1"
sha2 = "0.10.8"
md5 = "0.8.0"
hex = "0.4.3"
url = "2.5.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "json", "charset"] }
tempfile = "3.27.0"
libc = "0.2.186"
bytes = "1"
quick-xml = "0.41.0"
encoding_rs = "0.8.35"
futures = "0.3.28"
fastrand = "2.4.1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-native-roots", "sqlite", "postgres", "migrate", "macros", "time", "uuid", "json"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unexpected_cfgs = "warn"
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "deny"
large_futures = "deny"
unnecessary_wraps = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "warn"
print_stderr = "warn"
