[package]
name = "cheetah-signaling"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cheetah-config = { path = "../../crates/foundation/cheetah-config" }
cheetah-http-api = { path = "../../crates/api/cheetah-http-api" }
cheetah-signal-types = { path = "../../crates/foundation/cheetah-signal-types" }
cheetah-signal-contracts = { path = "../../crates/foundation/cheetah-signal-contracts" }
cheetah-runtime-api = { path = "../../crates/runtime/cheetah-runtime-api" }
cheetah-runtime-tokio = { path = "../../crates/runtime/cheetah-runtime-tokio" }
cheetah-signal-application = { path = "../../crates/application/cheetah-signal-application" }
cheetah-domain = { path = "../../crates/domain/cheetah-domain" }
cheetah-storage-api = { path = "../../crates/storage/cheetah-storage-api" }
cheetah-storage-sqlite = { path = "../../crates/storage/cheetah-storage-sqlite" }
cheetah-storage-postgres = { path = "../../crates/storage/cheetah-storage-postgres" }
cheetah-message-api = { path = "../../crates/messaging/cheetah-message-api" }
cheetah-message-local = { path = "../../crates/messaging/cheetah-message-local" }
cheetah-message-nats = { path = "../../crates/messaging/cheetah-message-nats" }
cheetah-cluster-ownership = { path = "../../crates/cluster/cheetah-cluster-ownership" }
cheetah-media-scheduler = { path = "../../crates/media/cheetah-media-scheduler" }
cheetah-media-client = { path = "../../crates/media/cheetah-media-client" }
cheetah-gb28181-module = { path = "../../crates/protocols/cheetah-gb28181-module" }
cheetah-gb28181-driver-tokio = { path = "../../crates/protocols/cheetah-gb28181-driver-tokio" }
cheetah-secret = { path = "../../crates/foundation/cheetah-secret" }
async-trait = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
