[package]
name = "cheetah-signaling-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Test doubles and fixtures for the signaling workspace."

[dependencies]

[lints]
workspace = true
