[package]
name = "cheetah-gb28181-simulator"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Multi-device GB28181 simulator for registration, heartbeat, catalog and media session testing."

[lib]
name = "cheetah_gb28181_simulator"
path = "src/lib.rs"

[[bin]]
name = "gb28181-simulator"
path = "src/main.rs"

[dependencies]
cheetah-gb28181-core = { path = "../../crates/protocols/cheetah-gb28181-core" }
cheetah-gb28181-module = { path = "../../crates/protocols/cheetah-gb28181-module" }
clap = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }

[lints]
workspace = true
