[package]
name = "cheetah-api-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Northbound REST/SSE/Webhook handlers and DTO mappers."

[dependencies]

[dev-dependencies]

[lints]
workspace = true
