[package]
name = "cheetah-cluster-ownership"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Device owner lease, resolver, and routing for Cheetah Signaling clusters."

[dependencies]
cheetah-domain = { path = "../../domain/cheetah-domain" }
cheetah-signal-types = { path = "../../foundation/cheetah-signal-types" }
cheetah-storage-api = { path = "../../storage/cheetah-storage-api" }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
cheetah-domain = { path = "../../domain/cheetah-domain", features = ["test-util"] }
cheetah-storage-sqlite = { path = "../../storage/cheetah-storage-sqlite" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
