[package]
name = "cheetah-device-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Device, channel, session and media binding domain aggregates."

[dependencies]

[dev-dependencies]

[lints]
workspace = true
