[package]
name = "cheetah-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Layered configuration loader for Cheetah Signaling."

[dependencies]
cheetah-signal-types = { path = "../cheetah-signal-types" }
config = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
