[package]
name = "cheetah-runtime-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Public runtime ports used by application, storage and messaging adapters."

[dependencies]

[dev-dependencies]

[lints]
workspace = true
