[package]
name = "cheetah-signal-contracts"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Generated Protocol Buffer and gRPC bindings for Cheetah Signaling."

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
