[package]
name = "cheetah-signal-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Shared domain primitives and newtype identities for the signaling control plane."

[dependencies]

[dev-dependencies]

[lints]
workspace = true
