[package]
name = "cheetah-signal-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Foundation types for Cheetah Signaling: IDs, timestamps, errors, pagination, and common context."

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
secrecy = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
fastrand = { workspace = true }
prost-types = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[features]
test-support = []

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
