[package]
name = "cheetah-media-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Media node gRPC client, registry and scheduler ports."

[dependencies]

[dev-dependencies]

[lints]
workspace = true
