[package]
name = "cheetah-media-scheduler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Media node registry, health tracking, and scheduling for Cheetah Signaling."

[dependencies]
cheetah-domain = { path = "../../domain/cheetah-domain" }
cheetah-signal-types = { path = "../../foundation/cheetah-signal-types" }
cheetah-signal-contracts = { path = "../../foundation/cheetah-signal-contracts" }
cheetah-media-client = { path = "../cheetah-media-client" }

tonic = { workspace = true, features = ["tls-ring"] }
tokio = { workspace = true, features = ["sync", "time", "net", "rt"] }
rustls = { workspace = true }
x509-parser = { workspace = true }
secrecy = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
rcgen.workspace = true

[lints]
workspace = true
