[package]
name = "cheetah-message-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Messaging ports and envelope mapping for Cheetah Signaling."

[dependencies]
cheetah-domain = { path = "../../domain/cheetah-domain" }
cheetah-signal-contracts = { path = "../../foundation/cheetah-signal-contracts" }
cheetah-signal-types = { path = "../../foundation/cheetah-signal-types" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
