[package]
name = "cheetah-messaging-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Bus, inbox/outbox and ownership ports."

[dependencies]

[dev-dependencies]

[lints]
workspace = true
