[package]
name = "cheetah-perf"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Performance, durability and stress scenario tests for Cheetah Signaling."

[dependencies]
cheetah-domain = { path = "../../domain/cheetah-domain", features = ["test-util"] }
cheetah-signal-types = { path = "../../foundation/cheetah-signal-types" }
cheetah-signal-application = { path = "../../application/cheetah-signal-application" }
cheetah-storage-api = { path = "../../storage/cheetah-storage-api" }
cheetah-storage-sqlite = { path = "../../storage/cheetah-storage-sqlite" }
cheetah-storage-postgres = { path = "../../storage/cheetah-storage-postgres" }
cheetah-message-api = { path = "../../messaging/cheetah-message-api" }
cheetah-message-local = { path = "../../messaging/cheetah-message-local" }
cheetah-message-nats = { path = "../../messaging/cheetah-message-nats", features = ["test-helpers"] }
cheetah-cluster-ownership = { path = "../../cluster/cheetah-cluster-ownership" }
cheetah-media-scheduler = { path = "../../media/cheetah-media-scheduler" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
testcontainers-modules = { version = "0.15", features = ["postgres", "nats"] }

[lints]
workspace = true
