[package]
name = "cheetah-plugin-host"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheetah-plugin-sdk = { path = "../cheetah-plugin-sdk" }
cheetah-signal-types = { path = "../../foundation/cheetah-signal-types" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
semver = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
